# CUDA-Accelerated-Visual-Inertial-Odometry-Fusion

./: CITATION.cff  README.md
cuUKF/: CMakeLists.txt  package.xml
cuUKF/include/cuUKF/: coreNode.hpp  cpuFilter.hpp  cpuNode.hpp  gpuFilter.cuh
cuUKF/launch/: gpu_filter.launch.py
cuUKF/nodes/: coreNode.cpp  cpuNode.cpp
cuUKF/src/: cpuFilter.cpp  gpuFilter.cu
